--- a/index.html
+++ b/index.html
@@ -55,74 +55,78 @@
 			</div>
 		</div>
 	</div>
-	<div>
-		<div class="col-xs-12 container text-center background-image-container" style="background-color:black; background-image: url('./assets/images/TECNOLOGY.png');">
-			<div class="center idea"><img id="headshot" src="./assets/images/Eltondeoliveira_profile.png" style="z-index: 9; margin-top:-18vh"></div>
+	<div class="">
+		<div class=" col-xs-12 container text-center background-image-container" style="background-color:black; background-image: url('./assets/images/TECNOLOGY.png');">
+			<div class="center w"><img id="headshot" src="./assets/images/Eltondeoliveira_profile.png" style="z-index: 9; margin-top:-18vh"></div>
 			<div class="text-center">
-				<div>
-					<h2 class="container ideia">Elton de<br>
+				<div class="">
+					<h2 class="container">Elton de<br>
 					Oliveira</h2>
-					<h3>Copywriter<br>
+					<h3 class="w3-black rounded">Copywriter<br>
 					e Produtor Digital</h3>
-					<div class="servix ">
-						<p class="darki">
+						<div class="servix ">
+						<p class=" w3-black1 rounded ">
+
 							Com formação em Letras e bastante ativo nos temas atuais de tecnologia. Já tive experiências em quase qualquer área do processo de produção de conteúdo. 
 							<br>
 							<br>Às vezes sou Desenvolvedor Web Freelancer, mas minha área de atuação preferida é escrever, planejar e distribuir os melhores conteúdos possíveis.
 							<br>
+							<br>
 							<br>Essas especialidades, bastante diversas entre si, certamente favorecem na hora da criação de um conteúdo rico em informções realmente relevantes e esclarecedor para seu cliente. 
 							<br>
 							<br>Seja sobre seus produtos, seja sobre seus serviços, essa é uma vantagem que vai ajudar muito durante o desenvolvimento de conteúdos, tutoriais ou treinamentos em novas ferramentas para seus colaboradores.
-							<br>
-							<br>Esse site foi montado para mostrar um pouco do meu trabalho para você e como posso auxiar no desenvolvimento de seu próximo projeto. Tenha uma boa leitura. Espero seu contato!
+							<br />
+							<br>Este site foi desenvolvido por mim para mostrar um pouco do meu trabalho para você e como posso auxiar no desenvolvimento de seu próximo projeto. Agradeço muito sua visita, tenha uma boa experiência!
+							
 						</p>
+						<br />
 					</div>
-					<div class="text-center ideia">
-						<h2 class="h2 branco">Confira em que posso ajudar</h2>
+					<div class="w3-black text-center">
+						<h2 class="rounded neonText">Confira em que posso ajudar</h2>
 						<hr>
 						<div class="col-xs-12">
-							<div class="rowservices">
-								<div class="service">
+							<div class="rowservices ">
+								<div class="service w3-black1">
 									
 									<h2>SEO<br></h2><br>
 									<p>Search Engine Optimazetion pode ser a resposta para atingir o cliente perfeito para seus negócios. Baseado em pesquisas especificas para sua empresa, seu conteúdo vai se destacar dos concorrentes.</p>
 								</div>
-								<div class="service">
+								<div class="service w3-black1 ">
 									<!--<i class="fas fa-laptop-code"></i><br>-->
 									<h2 style="letter-spacing: 1px;">Copyriting<br></h2><br>
 									<p>Por meio de técnicas de escrita adquiridas em mais de 10 anos de atuação, posso construir um material que certamente vai reter a atenção do seu cliente, melhorando a imagem da sua marca.</p>
 								</div>
-								<div class="service">
+								<div class="service w3-black1">
 									<!--<<i class="fas fa-chart-line"></i><br>-->
 									<h2 style="letter-spacing: 1px">Marketing</h2>
 									<p>Precisa de ajuda com a produção ou planejamento de conteúdos para o Marketing ou PPC? Seja qual o meio preferido, podemos ajudar muito o seu negócio a escalar nas vendas por meio dos anúncios.</p>
 								</div>
-								<div class="service">
+								<div class="service w3-black1">
 									<!--<<i class="fab fa-sketch"></i><br>-->
 									<h2 style="letter-spacing: 1px">GhostWriting</h2>-->
 									<p>Precisa de ajuda para criar os melhor conteúdos para seu público, mas está sem tempo? Estou à disposiçao para ajudar no desenvolvimento e na escrita do seu material — e tudo manqtido no sigilo.</p>
 								</div>
-								<div class="service">
+								<div class="service w3-black1">
 									<!--<<i class="fas fa-database"></i><br>-->
 									<h2 style="letter-spacing: 1px">WebPages</h2>
 									<p>Um dos meus hobbies preferidos é estudar programação. O desenvolvimento deste site que você está acessando foi todo realizado por mim, por meio de auxílio de alguns tutoriais e da documentação. Deixe-me sabendo caso precise, desse tipo de serviço!</p>
 								</div>
-								<div class="service">
+								<div class="service w3-black1">
 									<!--<<i class="fas fa-mobile-alt"></i><br>-->
 									<h2 style="letter-spacing: 1px">Revisão</h2>
 									<p>Precisa de ajuda para conquistar aquela publicação na revista dos sonhos? Garanto a revisão completa do seu artigo ou tese na formatação escolhida. Experiência ampla em revisão de materiais acadêmicos.</p>
 								</div>
-								<div class="service">
+								<div class="service w3-black1">
 									<!-- <<i class="fas fa-file-invoice"></i><br> -->
 									<h2 style="letter-spacing: 1px">Cursos</h2>
 									<p>Precisa de um curso para seua escola ou organizar um treinamento para seus colaboradores na área de tecnologia? Com certeza, eu posso ajudar!</p>
 								</div>
-								<div class="service">
+								<div class="service w3-black1">
 									<!--<<i class="fas fa-file-invoice"></i><br>-->
 									<h2 style="letter-spacing: 1px">Assessorias</h2>
 									<p>Precisa de algum conselho sobre o que investir na criaçao de conteúdo na sua empresa de tecnologia ou no seu comércio eletrônico? Saiba que estou à disposição para ajudar a superar qualquer desafio.</p>
 								</div>
-								<div class="service">
+								<div class="service w3-black1">
 									<!--<<i class="fas fa-file-invoice"></i><br> -->
 									<h2 style="letter-spacing: 1px">Entre outros</h2>
 									<p>Precisando de qualquer serviço relacionado à comunicação digital, basta entrar em contato pelos links fornecidos no fim desta página. Espero o seu chamado em breve!</p>
@@ -134,7 +138,7 @@
 				<div>
 					<a class="anchor" id="top" name="materiais"></a>
 
-				<div class="darki bgsection">
+				<div class="w3-black">
 					<h3 class="servix">A seguir, você encontra alguns dos materiais e projetos já desenvolvidos</h3><br>
 				</div>
 			<div class="container darki col-xs-12 container text-center">
@@ -219,23 +223,23 @@
 				<hr>
 				<!-- End of Timeline -->
 			</div><!--RESUME SECTION-->
-	<div class="background-image-container" style="background-image: url('./assets/images/TECNOLOGY.png')">
+	<div class="background-image-container darki" style="background-image: url('./assets/images/TECNOLOGY.png')">
 			<a class="anchor" id="top" name="pageone"></a>
-			<h2 class=" servix ideia text-center">Vivências e Oportunidades<br></h2><br>
+			<h2 class=" servix text-center">Vivências e Oportunidades<br></h2><br>
 			<br>
 			<!-- Page Container -->
-			<div class=" w3-row-padding">
+			<div class="w3-row-padding">
 				<!-- Left Column -->
 				<div class="w3-third">
-					<div class="w3-black ideia">
-						<div class="w3-display-container">
-							<img alt="Avatar" src="./assets/images/Eltondeoliveira_profile.png" style="width:100%">
+					<div class="w3-black roundded">
+						<div class="w3-display-container rounded">
+							<img alt="Avatar" src="./assets/images/Eltondeoliveira_profile.png"">
 							<div class="w3-display-bottomleft container w3-text-teal">
-								<h2 class="">Elton<br>
+								<h2 class="direit">Elton<br>
 								de Oliveira</h2>
 							</div>
 						</div>
-						<div class="direit" style="text-align:left;">
+						<div class="direit">
 							<hr>
 							<p class="direit"></p>
 							<p class="h3"><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</p>
@@ -311,15 +315,15 @@
 						</div>
 					</div><!-- End Left Column -->
 				</div><!-- Right Column -->
-				<div class="w3-twothird direit">
-					<div class="w3-container w3-card branco w3-margin-bottom">
-						<div class="w3-container w3-card branco">
-							<h2 class=" branco w3-padding-16"><i class="fa fa-suitcase fa-fw w3-text-teal"></i> Últimas Experiências</h2>
-							<div class=".vq4-container">
-								<div class="w3-container">
-									<div class=".vq4-container">
-										<div class="w3-container">
-											<h5 class="w3-opacity"><b>Web Developer / something.com</b></h5>
+				<div class="w3-twothird direit w3-black rounded">
+					<div class="w3-container w3-card w3-margin-bottom">
+						<div class="w3-container w3-card">
+							<h2 class="  w3-padding-16"><i class="fa fa-suitcase fa-fw w3-text-teal"></i> Últimas Experiências</h2>
+							<div class="">
+								<div class="w3-container rounded" >
+									<div class="">
+										<div class="rounded w3-container">
+											<h5 class=""><b>Web Developer / something.com</b></h5>
 											<h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2012 - Dec 2014</h6>
 											<p>Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
 											<hr>
