--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 								</div>
 								<div class="service w3-black1">
 									<!--<<i class="fab fa-sketch"></i><br>-->
-									<h2 style="letter-spacing: 1px">GhostWriting</h2>-->
-									<p>Precisa de ajuda para criar os melhor conteúdos para seu público, mas está sem tempo? Estou à disposiçao para ajudar no desenvolvimento e na escrita do seu material — e tudo manqtido no sigilo.</p>
+									<h2 style="letter-spacing: 1px">GhostWriting</h2>
+									<p>Crie os melhor conteúdos para seu público mesmo sem tempo! Estou à disposiçao para ajudar no desenvolvimento e na escrita do seu material — e tudo no absoluto sigilo.</p>
 								</div>
 								<div class="service w3-black1">
 									<!--<<i class="fas fa-database"></i><br>-->
