english version test

--- a/index(en).html
+++ b/index(en).html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR" dir="ltr">
+<html lang="en" dir="ltr">
 <head>
 	<meta charset="utf-8">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
@@ -21,7 +21,7 @@
 				<div class="collapse navbar-collapse" id="navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li>
-							<a class="" href="./index.html" style="color: rgb(255, 255, 255);" title="">Home</a>
+							<a class="" href="./index.html" style="color: rgb(255, 255, 255);" title="">Home (BR)</a>
 						</li>
 						<li>
 							<a class="" href="#materiais">+Material</a>
