--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<div class="collapse navbar-collapse" id="navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li>
-							<a class="" href="./index.html" style="color: rgb(255, 255, 255);" title="">Home</a>
+							<a class="" href="./index(en).html" style="color: rgb(255, 255, 255);" title="">Home (EN)</a>
 						</li>
 						<li>
 							<a class="" href="#materiais">+Materiais</a>
@@ -37,7 +37,7 @@
 			</div>
 		</nav>
 	</header>
-	
+
 	<div id="site-border-left"></div>
 	<div id="site-border-right"></div>
 	<div id="site-border-top" style="z-index:10"></div>
